package entity.base;

import logic.Player;

public interface Collectable {
    void collect(Player player);
}
