package entity.flower;

import entity.base.Item;

public class Dandelion extends Item {
    public Dandelion() {
        super("Dandelion", 200);
    }
}
