package entity.flower;

import entity.base.Item;

public class Orchid extends Item {
    public Orchid() {
        super("Orchid", 250);
    }
}
