package entity.flower;

import entity.base.Item;

public class Poppy extends Item {
    public Poppy() {
        super("Poppy", 100);
    }
}
