package entity.flower;

import entity.base.Item;

public class Tulip extends Item {
    public Tulip() {
        super("Tulip", 100);
    }
}
